<resources>
    <string name="app_name">Tap Quick</string>
    <string name="settings">Settings</string>
    <string name="play_as_guest">Play as Guest</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="done">done</string>
    <string name="cancel">Cancel</string>
    <string name="next">next</string>
    <string name="retry">Retry</string>
    <string name="try_again">Try Again</string>
    <string name="choose_an_avatar">Choose an Avatar</string>
    <string name="won">Won:</string>
    <string name="room_name">Room Name</string>
    <string name="join_room">Join Room</string>
    <string name="larboard">Leader Board</string>
    <string name="users">Users :</string>
</resources>
