<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="io.extremus.kittuov.tapquick.fragments.GameDashFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/title_vertical_margin"
        android:layout_marginRight="@dimen/title_vertical_margin"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/won_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/won"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/font_size_title"/>

        <TextView
            android:id="@+id/total_text"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textSize="@dimen/font_size_title"
            android:textColor="@android:color/background_light"/>

    </RelativeLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/larboard"
        android:id="@+id/openLeaderBoard"
        android:background="@drawable/round_rect"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_margin="@dimen/title_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/room_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect"
            android:hint="@string/room_name"
            android:textColorHint="@android:color/secondary_text_dark"
            android:padding="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_vertical_margin"
            android:background="@drawable/round_rect"
            android:text="@string/join_room"
            android:textColor="@color/colorPrimary"
            android:padding="@dimen/activity_vertical_margin"
            android:onClick="joinRoom" />

    </LinearLayout>


</LinearLayout>
