<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="io.extremus.kittuov.tapquick.fragments.login.GuestLogin">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/firstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            android:inputType="text"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:textColor="@android:color/background_light"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            android:inputType="text"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:hint="@string/last_name"
            android:textColor="@android:color/background_light"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rect"
                android:text="@string/next"
                android:onClick="avatarSelect"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:layout_marginBottom="@dimen/view_vertical_margin"
                />

            <Button
                android:id="@+id/glogin_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rect"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:layout_marginBottom="@dimen/view_vertical_margin"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel"

                android:onClick="back" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
