<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading_spinner"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin">
    </ProgressBar>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_layout"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:gravity="center"
            android:padding="@dimen/view_vertical_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_error"
                android:text="@string/try_again"
                android:textColor="@android:color/background_light"
                android:layout_margin="@dimen/view_vertical_margin"
                android:textSize="@dimen/font_size_subhead"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pageLoadRetry"
                android:contentDescription="@string/retry"
                android:src="@drawable/ic_sync_black_24dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect"
            android:text="@string/settings"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="openSettings" />
    </LinearLayout>

</LinearLayout>
